Fix font sizes on mobile remove loop on videos

--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -50,15 +50,27 @@ h4 {
 }
 
 h1 {
-  font-size: 2.5rem;
+  font-size: 1.85rem;
+
+  @include breakpoint(560px) {
+    font-size: 2.5rem;
+  }
 }
 
 h2 {
-  font-size: 2rem;
+  font-size: 1.55rem;
+
+  @include breakpoint(560px) {
+    font-size: 2rem;
+  }
 }
 
 h3 {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
+
+  @include breakpoint(560px) {
+    font-size: 1.15rem;
+  }
 }
 
 hr {
